# facie-test

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-test.yml
app/: exceptions.py  main.py
app/dependencies/: __init__.py  database.py  llm.py
app/models/: episode.py
app/routers/: episodes.py
app/tests/: test_episodes.py
src/: episode.py  main.py
src/dependencies/: __init__.py
src/models/: __init__.py
src/routers/: __init__.py  episodes.py
