[project]
name = "facie-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepseek>=1.0.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
]
